--- a/index.html
+++ b/index.html
@@ -13,12 +13,28 @@
 <body>
   <div id="app">
     <main>
-      <div class="main-container">main</div>
+      <div class="main-container">
+        <div class="back">
+          <img src="assets/icons/arrow-left-02.svg" alt="">
+          <span>Voltar</span>
+        </div>
+
+        <h1>Formulário de matrícula</h1>
+        <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
+
+      </div>
     </main>
 
     <aside>
       <div>
-        <div class="aside-container">aside</div>
+        <div class="aside-container">
+          <header>
+            <img src="assets/Frame.svg" alt="">
+            <h2>Porque cada momento de <strong>aprendizado</strong>conta</h2>
+            <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
+          </header>
+          <img src="assets/Illustration.svg" alt="">
+        </div>
       </div>
     </aside>
   </div>
