--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
               <label for="fullname">Nome completo</label>
               <input 
                 id="fullname" 
-                type="text"
-                placeholder="Qual o nome da criança">
+                type="number"
+  number       "numberaceholder="Qual o nome da criança">
               
                 <div class="input-wrapper">
                   <label for="birth">Data de nascimento</label>
@@ -69,6 +69,37 @@
                   </p>
                   </div>
                   </div>
+          </fieldset>
+          <fieldset class="address">
+            <legend>Endereço residencial</legend>
+            <div class="input-wrapper">
+              <label for="cep">CEP</label>
+              <input type="text" id="cep" name="cep">
+            </div>
+            <div class="flex">
+              <div class="input-wrapper flex-2">
+                <label for="street">Rua</label>
+                <input type="text" id="street" name="street"
+                value="Rua das Flores" disabled>
+              </div>
+            </div>
+            <div class="input-wrapper flex-1">
+                <label for="number">Número</label>
+                <input type="number" id="number" name="number">
+            </div>
+
+            <div class="flex">
+              <div class="input-wrapper flex2">
+                <label for="city">Cidade</label>
+                <input type="text" id="street" name="street"
+                value="São Paulo" disabled>
+              </div>
+            </div>
+            <div class="input-wrapper flex1">
+                <label for="state">Estado</label>
+                <input type="text" id="number" name="number" disabled value="SP">
+            </div>
+            
           </fieldset>
         </form>
 
